--- a/.htaccess
+++ b/.htaccess
@@ -11,7 +11,7 @@ RewriteEngine on
 
 
 #Domain: localhost:8888
-RewriteRule . - [E=REWRITEBASE:/prestashop-14/]
+RewriteRule . - [E=REWRITEBASE:/cave/prestashop/]
 RewriteRule ^api$ api/ [L]
 
 RewriteRule ^api/(.*)$ %{ENV:REWRITEBASE}webservice/dispatcher.php?url=$1 [QSA,L]
